objects/Veda_directorship__c.object
<CustomObject>
    <fields>
        <fullName>Last_Known_As_Director__c</fullName>
        <label>Last Known As Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda directorship</relationshipLabel>
        <relationshipName>Veda_directorship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date_Appointed__c</fullName>
        <label>date Appointed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Ceased__c</fullName>
        <label>date Ceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Extract_Date__c</fullName>
        <label>last Extract Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Extract_Time__c</fullName>
        <label>last Extract Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Update_Date__c</fullName>
        <label>last Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Update_Time__c</fullName>
        <label>last Update Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_ABN__c</fullName>
        <label>organisationABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Bureau_Reference__c</fullName>
        <label>organisation Bureau Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Name_Start_Date__c</fullName>
        <label>organisation Name Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Name__c</fullName>
        <label>organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Organisation_Number__c</fullName>
        <label>organisationOrganisationNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Status_Code__c</fullName>
        <label>organisationStatusCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Status__c</fullName>
        <label>organisationStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Type_Code__c</fullName>
        <label>organisation Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation_Type__c</fullName>
        <label>organisation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda directorship</label>
    <nameField>
        <label>directorship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda directorship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>